# aws_logs

./: .gitignore  Cargo.toml
src/: daws_logs.rs  main.rs
